--- a/examples/azure-container-apps/Pulumi.yaml
+++ b/examples/azure-container-apps/Pulumi.yaml
@@ -1,7 +1,7 @@
 name: azure-container-apps
 runtime: yaml
 description: Azure Container Apps example
-config:
+configuration:
   sqlAdmin:
     type: String
     default: pulumi
