--- a/examples/webserver/Pulumi.yaml
+++ b/examples/webserver/Pulumi.yaml
@@ -1,7 +1,7 @@
 name: webserver
 runtime: yaml
 description: Basic example of an AWS web server accessible over HTTP
-config:
+configuration:
   InstanceType:
     type: String
     default: t3.micro
