Exclude cue-static-web-app test from sync action

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -8,4 +8,5 @@ group:
       exclude: |
         .gitignore
         go.mod
+        pkg/tests/transpiled_examples/cue-static-web-app
       deleteOrphaned: true
