--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -17,12 +17,7 @@ jobs:
         with:
           GH_PAT: ${{ secrets.PULUMI_BOT_TOKEN }}
           TEAM_REVIEWERS: Platform
-          PR_BODY: "This PR syncs changes to the codegen'd PCL files from the latest `pulumi/yaml` release.\nTo program-generate new/modified examples, please fork this branch and run `cd pkg/codegen && PULUMI_ACCEPT=true go test -timeout 1h -tags all,smoke -run '^TestGenerateProgram$' ./...`."
+          PR_BODY: "This PR syncs changes to the codegen'd PCL files from the latest `pulumi/yaml` release.\nTo program-gen new/ modified examples, please fork this branch and run `cd pkg/codegen && PULUMI_ACCEPT=true go test -timeout 1h -tags all,smoke -run '^TestGenerateProgram$' ./...`.\nThis is not required if all files in the PR have been deleted (no new examples)."
           COMMIT_PREFIX: "(pulumi-bot)"
           PR_LABELS: |
             impact/no-changelog-required
-          # Forces examples to regenerate in pulumi/pulumi
-          version-set: |
-            {
-              "name": "not-current"
-            }
