Avoid panicing for non-string map keys

--- a/pkg/pulumiyaml/testing/test/testdata/direct-invoke-pp/yaml/direct-invoke.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/direct-invoke-pp/yaml/direct-invoke.yaml
@@ -4,6 +4,8 @@ resources:
     properties:
       name: example_policy
       path: /
+      tags:
+        '3': 4
       policy:
         fn::invoke:
           Function: aws:iam:getPolicyDocument
