--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -27,9 +27,7 @@ jobs:
             exit 1
           fi
       - name: Lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.49.0
-          make lint-golang || true
+        run: make lint-golang
 
   check-copyright:
     runs-on: ubuntu-latest
