--- a/.github/workflows/periodic-cover.yml
+++ b/.github/workflows/periodic-cover.yml
@@ -1,14 +1,15 @@
-name: Run Acceptance Tests from PR
-
+name: Periodically capture coverage
 on:
-  pull_request:
-    paths-ignore:
-      - 'CHANGELOG.md'
-      - 'CHANGELOG_PENDING.md'
+  workflow_dispatch: {}
+  schedule:
+    # Run every 12 hours.
+    - cron: '0 */12 * * *'
+
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
 
 jobs:
-  lint:
-    uses: ./.github/workflows/stage-lint.yml
   test:
     uses: ./.github/workflows/stage-test.yml
     with:
