--- a/.github/workflows/pr-tests-command.yaml
+++ b/.github/workflows/pr-tests-command.yaml
@@ -28,6 +28,7 @@ jobs:
     with:
       live-test: true
       commit-ref: refs/pull/${{ github.event.client_payload.pull_request.number }}/merge
+      coverage: true
     secrets:
       PULUMI_ACCESS_TOKEN:     ${{ secrets.PULUMI_ACCESS_TOKEN }}
       AWS_ACCESS_KEY_ID:       ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -37,3 +38,4 @@ jobs:
       ARM_CLIENT_SECRET:       ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID:     ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID:           ${{ secrets.ARM_TENANT_ID }}
+      CODECOV_TOKEN:           ${{ secrets.CODECOV_TOKEN }}
