ci/lint: Enable staticcheck and other linters
Enables nearly all the same linters that are used in pulumi/pulumi,
disabling deprecated or unused linters (per pulumi/pulumi).

The following linters were not enabled:

- lll, gofumpt:
  These may cause more code churn than desirable in this commit.
  They may be enabled in the future.
- prealloc:
  This has been a source of many nil-vs-empty-slice bugs.
  Enabling this would increase the risk of this commit.

Fixes the following issues as part of enabling the linters:

```
pkg/pulumiyaml/ast/template.go:67:34: S1019: should use make([]*StringExpr, list.Len()) instead (gosimple)
pkg/pulumiyaml/ast/template.go:102:36: S1019: should use make([]ConfigMapEntry, obj.Len()) instead (gosimple)
pkg/pulumiyaml/ast/template.go:157:39: S1019: should use make([]VariablesMapEntry, obj.Len()) instead (gosimple)
pkg/pulumiyaml/ast/template.go:199:39: S1019: should use make([]ResourcesMapEntry, obj.Len()) instead (gosimple)
pkg/pulumiyaml/ast/template.go:251:38: S1019: should use make([]PropertyMapEntry, obj.Len()) instead (gosimple)
pkg/pulumiyaml/ast/template.go:618:25: SA6005: should use strings.EqualFold instead (staticcheck)
pkg/pulumiyaml/diags/utils.go:47:2: S1001: should use copy(to, from) instead of a loop (gosimple)
pkg/pulumiyaml/diags/diags.go:125:12: S1039: unnecessary use of fmt.Sprintf (gosimple)
pkg/pulumiyaml/diags/diags.go:143:14: S1039: unnecessary use of fmt.Sprintf (gosimple)
pkg/pulumiyaml/syntax/diags.go:91:19: S1025: the argument is already a string, there's no need to use fmt.Sprintf (gosimple)
pkg/pulumiyaml/packages.go:161:63: S1039: unnecessary use of fmt.Sprintf (gosimple)
pkg/pulumiyaml/analyser.go:1225:2: S1008: should use 'return e.VisitExpr(ctx, x)' instead of 'if !e.VisitExpr(ctx, x) { return false }; return true' (gosimple)
pkg/pulumiyaml/run.go:12:2: SA1019: "io/ioutil" has been deprecated since Go 1.19: As of Go 1.16, the same functionality is now provided by package io or package os, and those impl

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,24 +3,38 @@ run:
 linters:
   enable-all: false
   enable:
-    - deadcode
     - errcheck
-    - goconst
     - gofmt
     - revive
     - gosec
     - govet
     - ineffassign
     - misspell
+    - nolintlint
     - nakedret
-    - structcheck
     - unconvert
-    - varcheck
+    - unused
     - paralleltest
-  disable:
-    - lll
-    - staticcheck # Disabled due to OOM errors in golangci-lint@v1.18.0
-    - megacheck # Disabled due to OOM errors in golangci-lint@v1.18.0
+
+linters-settings:
+  nakedret:
+    # Make an issue if func has more lines of code than this setting, and it has naked returns.
+    # Default: 30
+    max-func-lines: 60
+  nolintlint:
+    # Some linter exclusions are added to generated or templated files
+    # pre-emptively.
+    # Don't complain about these.
+    allow-unused: true
+  govet:
+    enable:
+      - nilness
+      # Reject comparisons of reflect.Value with DeepEqual or '=='.
+      - reflectvaluecompare
+      # Reject sort.Slice calls with a non-slice argument.
+      - sortslice
+      # Detect write to struct/arrays by-value that aren't read again.
+      - unusedwrite
 
 issues:
   exclude-rules:
@@ -28,3 +42,14 @@ issues:
     # Parameter names are useful; replacing them with '_' is undesirable.
     - linters: [revive]
       text: 'unused-parameter: parameter \S+ seems to be unused, consider removing or renaming it as _'
+
+    # staticcheck already has smarter checks for empty blocks.
+    # revive's empty-block linter has false positives.
+    # For example, as of writing this, the following is not allowed.
+    #   for foo() { }
+    - linters: [revive]
+      text: 'empty-block: this block is empty, you can remove it'
+
+  exclude:
+    # https://github.com/pulumi/pulumi/issues/9469
+    - 'Name is deprecated: Name returns the variable or declaration name of the resource'
