--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.20.x
-      - run: go mod tidy -compat=1.17
+      - run: go mod tidy -go=1.19
       - name: Fail if god mod not tidy
         run: |
           if [ -n "$(git status --porcelain)" ]; then
