--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -7,10 +7,10 @@ permissions: read-all
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GOLANGCI_LINT_VERSION: v1.53
 
 jobs:
   lint:
-    container: golangci/golangci-lint:latest
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.20.x
+          # golangci-lint-action handles all the caching for Go.
+          cache: false
       - run: go mod tidy -go=1.19
       - name: Fail if god mod not tidy
         run: |
@@ -26,10 +28,11 @@ jobs:
             echo "::error go.mod not tidy"
             exit 1
           fi
-      - name: Lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.53.3
-          make lint-golang || true
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
 
   check-copyright:
     runs-on: ubuntu-latest
