lint(all): Fix golangci-lint issues
Before using golangci-lint-action, lint failures were ignored
as the check was:

    make lint-golang || true

This fixes the issues found by the linter minus revive's
"unused parameter" check which is not something we agree with.
This matches what we've done in pulumi/pulumi.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,3 +21,10 @@ linters:
     - lll
     - staticcheck # Disabled due to OOM errors in golangci-lint@v1.18.0
     - megacheck # Disabled due to OOM errors in golangci-lint@v1.18.0
+
+issues:
+  exclude-rules:
+    # Don't warn on unused parameters.
+    # Parameter names are useful; replacing them with '_' is undesirable.
+    - linters: [revive]
+      text: 'unused-parameter: parameter \S+ seems to be unused, consider removing or renaming it as _'
