--- a/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/kubernetes-pod-pp/yaml/kubernetes-pod.yaml
@@ -16,6 +16,14 @@ resources:
               limits:
                 memory: 20Mi
                 cpu: 0.2
+          - name: nginx2
+            image: nginx:1.14-alpine
+            ports:
+              - containerPort: 80
+            resources:
+              limits:
+                memory: 20Mi
+                cpu: 0.2
 variables:
   # Test that we can assign from a constant without type errors
   kind: ${bar.kind}
