Support (logical) name for resources and config variables

--- a/pkg/pulumiyaml/testing/test/testdata/aws-webserver-pp/yaml/aws-webserver.yaml
+++ b/pkg/pulumiyaml/testing/test/testdata/aws-webserver-pp/yaml/aws-webserver.yaml
@@ -32,7 +32,7 @@ variables:
         filters:
           - name: name
             values:
-              - amzn-ami-hvm-*-x86_64-ebs
+              - amzn2-ami-hvm-2.0.20231218.0-x86_64-ebs
         owners:
           - '137112412989'
         mostRecent: true
