--- a/.github/workflows/stage-lint.yml
+++ b/.github/workflows/stage-lint.yml
@@ -7,7 +7,8 @@ permissions: read-all
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  GOLANGCI_LINT_VERSION: v1.53
+  GOLANGCI_LINT_VERSION: v1.55
+  GO_VERSION: v1.21.x
 
 jobs:
   lint:
@@ -16,11 +17,11 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.20.x
-          # golangci-lint-action handles all the caching for Go.
-          cache: false
+          go-version: ${{ env.GO_VERSION }}
+          cache-dependency-path: |
+            **/go.sum
       - run: go mod tidy -go=1.19
       - name: Fail if god mod not tidy
         run: |
@@ -28,10 +29,13 @@ jobs:
             echo "::error go.mod not tidy"
             exit 1
           fi
-
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v4
         with:
+          # Caching was done by actions/setup-go
+          skip-cache: true
+          skip-pkg-cache: true
+          skip-build-cache: true
           version: ${{ env.GOLANGCI_LINT_VERSION }}
 
   check-copyright:
